--- a/assets/default/css/responsive.css
+++ b/assets/default/css/responsive.css
@@ -27,7 +27,7 @@ ul.totalList > li:nth-child(4n) {
 
 @media only screen and (min-width: 992px) {
 html {
-    font-size: 14.5px;
+    font-size: 15px;
 }
 .freelancer-actions {
 	margin-left: 6.6rem;
@@ -38,7 +38,16 @@ html {
 }
 @media only screen and (min-width: 1200px) {
 html {
-    font-size: 15px;
+    font-size: 16px;
+}
+.xl-20 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+}
+ul.top-list{
+	columns: 4;
 }
 }
 
@@ -52,6 +61,7 @@ ul.totalList > li:nth-child(2n) {
 .sidebar-container {
 	margin-top: 20px;
 }
+
 }
 
 @media only screen and (max-width: 575px) {
