--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -2,6 +2,21 @@
 /* CSS Document */
 
 /* global start */
+@font-face {
+ font-family: 'FSJoey';
+ src:url('../fonts/FSJoey-Regular.otf');
+ font-weight:normal;
+}
+@font-face {
+font-family:'FSJoey';
+src:url('../fonts/FSJoey-Medium.otf');
+font-weight:600;
+}
+@font-face {
+ font-family: 'FSJoey';
+ src:url('../fonts/FSJoey-Bold.otf');
+ font-weight:bold;
+}
 ol, ul, dl {
     list-style:none;
 	padding:0
@@ -11,6 +26,55 @@ b, strong {
 }
 /* global end */
 
+body {	
+	background-color: #f5f5f5;
+	color: #333;
+	font-family:'Open sans', Helvetica, sans-serif;
+}
+.btn{
+	font-family:'FSJoey', Helvetica, sans-serif;
+	font-weight:500;
+}
+.btn-white{
+	background-color:#fff;
+	color: var(--siteColor);
+}
+.btn-outline-white{
+	border-color:#fff;
+	color: #fff;
+}
+.btn-outline-white:hover, .btn-outline-white:focus{
+	background-color:#fff;
+	color: var(--siteColor);
+}
+.btn-outline-black{
+	border-color:#000;
+	color: #000;
+}
+.btn-outline-black:hover, .btn-outline-black:focus{
+	background-color:#000;
+	color: #fff;
+}
+.row-5 [class^="col"], .row-5 [class*=" col"] {
+ padding-left:5px;
+ padding-right:5px;
+}
+.row-10 {
+	margin-left:-10px;
+	margin-right:-10px;
+}
+.row-10 [class^="col"], .row-10 [class*=" col"] {
+ padding-left:10px;
+ padding-right:10px;
+}
+.row-0 {
+	margin-left:0;
+	margin-right:0;
+}
+.row-0 [class^="col"], .row-0 [class*=" col"] {
+ padding-left:0;
+ padding-right:0;
+}
 /* bootstrap start */
 .nav-tabs .nav-link {
 	border: none;
@@ -563,7 +627,9 @@ font-size:2rem
 	flex: 1;
 }
 .panel {
-	background-color:#fff
+	background-color:#fff;
+	border-radius: 0.25rem;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 .panel-header {
 	border-bottom:1px solid #ddd;
@@ -608,10 +674,13 @@ ul.langList > li:last-child {
 
 .general-form {
 	background-color:#fff;
-	box-shadow: 0 2px 6px rgba(0,0,0,0.25);
-    border-radius: 4px;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 0.25rem;
 	margin:0 auto;
-	max-width:500px
+	max-width:480px
+}
+.general-form h1{
+	font-size:2rem;
 }
 .general-body {
 	padding:1.5rem;
@@ -620,7 +689,6 @@ ul.langList > li:last-child {
     min-width: 25%
 }
 .general-form .general-body > form {
-	max-width: 400px;
     margin: 0 auto;
 }
 .general-form .general-footer {
@@ -665,8 +733,12 @@ ul.totalList {
     align-content: center;
     text-align: center;
     background-color: #fff;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 	margin-bottom:0;
 	overflow:hidden
+}
+.panel-body > ul.totalList {
+	box-shadow:none;
 }
 ul.totalList > li {
 	flex: 1;
@@ -781,16 +853,6 @@ ul.skill-tags > li {
 .relative {
 	position:relative
 }
-.btn-outline-site {
-	border:1px solid #40de00;
-	color: #40de00;
-}
-.btn-outline-site:hover {
-	border-color: #40de00;
-	background-color: #40de00;
-	color: #fff;
-}
-
 .ribbon {
     width: 150px;
     height: 150px;
@@ -834,10 +896,6 @@ ul.skill-tags > li {
 }
 .radio-inline {
 	margin-right:1rem
-}
-.btn-outline-black {
-    border: 1px solid #333;
-    color: #333;
 }
 .btn-group > .btn-outline-black:active,
 .btn-group > .btn-outline-black:not(:disabled):not(.disabled).active {
@@ -970,23 +1028,116 @@ ul.skill-tags > li {
 .attach-thumbnail{
 	max-width:300px
 }
+.how-home{
+	margin-bottom:-1.5rem;
+}
+.how-box{
+	background-color:#fff;
+	border-radius: 0.25rem;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);	
+	margin-bottom:1.5rem;
+    min-height: 250px;
+	padding:1.25rem;
+	position: relative;
+    text-align: center;
+	overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.how-box h3{
+	color:#000;
+	font-family:'FSJoey', Helvetica, sans-serif;
+}
+.how-box p{
+	font-size:0.933rem;
+	margin-bottom:0;
+}
+.how-steps{
+	background-color:var(--siteColor);
+	border-radius:50%;
+	color:#fff;
+	font-family:'FSJoey', Helvetica, sans-serif;
+	padding: 0 0.75rem;
+    position: absolute;
+    right: -32px;
+    top: -32px;
+    height: 84px;
+    width: 84px;
+    display: flex;
+    align-items: flex-end;
+}
 
+.recommended .pricing-plan-features ul.list-2 li:before{
+	filter: brightness(0) invert(1);
+}
+.choose-acc{
+	margin-bottom:-1.5rem;
+}
+.choose-acc .card{
+	background-image:url('../images/wave.png');
+	background-position:center bottom;
+	background-repeat:no-repeat;
+	border:none;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	margin-bottom:1.5rem;
+	min-height:350px;
+	display:flex;
+	flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;	
+}
+.choose-acc .card h3{
+	color:#000;
+	font-weight:normal;
+	margin-bottom:0;
+}
+.choose-acc .card h2{
+	color:#000;
+	font-weight:bold;
+}
+.choose-acc .card p{
+	font-size:0.933rem;
+}
+.partner .card{
+	border:none;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	margin:10px;
+}
 
+ul.top-list{
+	font-size:0.933rem;
+}
+ul.top-list > li{
+}
+ul.top-list > li > a{
+	color:#000;
+}
+ul.top-list > li > a:hover{
+	color:var(--siteColor);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ul.display-inline li {
+    display: inline-block;
+}
+.header-widget ul.display-inline > li{
+	margin-right:1.5rem;
+}
+.header-widget ul.display-inline > li:last-child{
+	margin:0;
+}
+.header-widget ul.display-inline > li > a{
+	color:#000;
+	font-family:'FSJoey', Helvetica, sans-serif;
+	font-size: 1.125rem;
+}
+.header-widget ul.display-inline > li > a:hover{
+	color:var(--siteColor);
+}
+.header-widget ul.display-inline > li > a > img {
+    vertical-align: -3px;
+}
 
 
 
