--- a/assets/default/css/responsive.css
+++ b/assets/default/css/responsive.css
@@ -23,9 +23,6 @@ ul.totalList > li:nth-child(4n) {
 .attachmentFile ul> li>a h5{
 	max-width: 180px;
 }
-}
-
-@media only screen and (min-width: 992px) {
 html {
     font-size: 15px;
 }
@@ -36,6 +33,13 @@ html {
     flex: 0 0 calc(25% - 1.25rem);
 }
 }
+
+@media only screen and (min-width: 992px) {
+	.language-switcher.bootstrap-select.btn-group button {
+		border-color: transparent;
+	}
+}
+
 @media only screen and (min-width: 1200px) {
 html {
     font-size: 16px;
@@ -51,6 +55,12 @@ ul.top-list{
 }
 }
 
+@media only screen and (max-width: 991px) {
+	.sidebar-container {
+		display:none;
+	}
+}
+
 @media only screen and (max-width: 767px) {
 ul.totalList > li {
 	flex: 0 0 50%;
@@ -58,9 +68,16 @@ ul.totalList > li {
 ul.totalList > li:nth-child(2n) {
 	border-right:none
 }
-.sidebar-container {
+/*.sidebar-container {
 	margin-top: 20px;
+}*/
+.search-box {
+	margin-bottom:1rem
 }
+.task-listing > .task-listing-body{
+	flex-direction:column;
+}
+
 
 }
 
