--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -81,7 +81,7 @@ img {
 	position: relative;
 	z-index: 999;
 	padding: 0;
-	box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.12);
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
 	height: 80px;
 	background-color: #fff;
 }
@@ -522,6 +522,7 @@ a.header-notifications-button i {
 }
 /* Avatar */
 .user-avatar {
+	background-color: #dfdfdf;
 	display: inline-block;
 	border-radius: 50%;
 	width: 42px;
@@ -1741,7 +1742,8 @@ display: none;
 }
 .footer-rows-container {
 	display: flex;
-	height: 48px;
+	align-items: center;
+	/*height: 48px;*/
 	position: relative;
 	z-index: 100;
 }
@@ -1821,7 +1823,6 @@ display: none;
 	padding-left: 18px;
 	color: #fff;
 	background-color: #000;
-	border-color: transparent;
 	transition: 0.3s;
 	box-shadow: none;
 }
@@ -1850,7 +1851,7 @@ display: none;
 .footer-social-links {
 	font-size: 0;
 	list-style: none;
-	margin: 0 -10px;
+	margin:0;
 	padding: 0;
 }
 .footer-social-links li {
@@ -1994,11 +1995,19 @@ display: none;
 /* Footer Media Queries*/
 @media (max-width: 991px) {
  #footer h3 {
-margin-top: 45px;
+margin-top: 30px;
 }
  .footer-middle-section {
 padding-top: 0;
 padding-bottom: 45px
+}
+.footer-rows-container {
+ /*height: auto;
+ padding: 20px 0 40px 0;*/
+ flex-direction: column;
+}
+#footer p, .footer-social-links{
+	margin-bottom:1rem;
 }
 }
  @media (max-width: 767px) {
@@ -2008,10 +2017,7 @@ padding-left: 15px;
  .content-right-offset {
 padding-left: 15px;
 }
- .footer-rows-container {
- height: auto;
- padding: 20px 0 40px 0;
-}
+
  .footer-rows-left,  .footer-rows-right {
  float: none;
  height: auto;
@@ -2030,9 +2036,8 @@ top: 0;
  height: 46px;
 }
  #footer .footer-row {
- padding: 0;
  float: none;
- padding: 20px 0 0 0;
+ padding: 10px 0;
  display: block;
  width: 100%;
  border: none;
@@ -2040,6 +2045,7 @@ top: 0;
  .footer-rows-container .footer-rows-left,  .footer-rows-container .footer-rows-right {
 display: block
 }
+
 }
 /* ---------------------------------- */
 /* Pagination
@@ -2175,9 +2181,7 @@ body #backtotop a {
 	display: block;
 }
 .sidebar-widget h5 {
-	font-size: 1.067rem;
-    font-weight: 600;
-    color: #333;
+	font-size: 1.125rem;
 }
 /* ---------------------------------- */
 /* Notify Box
@@ -2405,8 +2409,8 @@ right: auto;
 /* Single Page Header
 ------------------------------------- */
 .single-page-header {
-    background-color: #f3f3f3;
-	/*margin-bottom: 3rem;*/
+    background-color: #fff;
+	margin-bottom: 3rem;
 	padding: 2rem 0;
 	position: relative;
 }
@@ -2483,15 +2487,15 @@ max-width: 140px;
 }
 }
 .single-page-header.freelancer-header .header-image {
-	background: #fff;
+	background: #dfdfdf;
 	border-radius: 50%;
 	box-shadow: none;
 	display: flex;
 	padding: 0;
 	overflow: hidden;
-	height: 120px;
-	flex: 0 0 120px;
-	width: 120px;
+	height: 100px;
+	flex: 0 0 100px;
+	width: 100px;
 }
 .single-page-header .header-image img {
 	align-self: center;
@@ -2510,7 +2514,6 @@ max-width: 140px;
 	flex: 1;
 }
 .single-page-header .header-details h3 {
-	color: #333;
 	font-size: 1.6rem;
 	margin: 0;
 	padding: 0;
@@ -2519,7 +2522,7 @@ max-width: 140px;
 	display: inline-block;
 }
 .single-page-header .header-details h3 span {
-	color: #808080;
+	color: #777;
 	display: block;
 	font-size: 1rem;
 	font-weight: 400;
@@ -2587,23 +2590,22 @@ max-width: 140px;
 }
 /* Salary Box */
 .single-page-header .salary-box {
-	border-radius: 4px;
+	/*border-radius: 4px;
 	box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
 	background-color: #fff;
-	display: inline-block;
-	padding: 10px 15px;
+	padding: 10px 15px;*/
+	display: inline-block;	
 	margin-left: auto;
+	margin-top:2rem;
 }
 .salary-box .salary-type {
-	color: #888;
+	color: #777;
 	line-height: 20px;
-	margin: 3px 0 8px 0;
 }
 .salary-box .salary-amount {
 	color: #333;
-	font-size: 28px;
-	line-height: 36px;
-	font-weight: 300;
+	font-size: 2rem;
+	font-weight: bold;
 }
 
 /* Media Queries for Single Page Header */
@@ -3848,15 +3850,15 @@ text-align: center;
 ------------------------------------- */
 .job-listing {
 	display: block;
-	border-radius: 4px;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 	margin-bottom: 1.25rem;
 	background-color: #fff;
 	transition: 0.3s;
 	position: relative;
 }
 .job-listing:hover {
-	box-shadow: 0 2px 12px rgba(0, 0, 0, 0.15);
+	box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
 	transform: translateY(-5px);
 }
 .job-listing-details {
@@ -3872,6 +3874,7 @@ text-align: center;
 	position: relative;
 }
 .job-listing .job-listing-company-logo img {
+    background-color: #eee;
 	/*border-radius: 4px;*/
 	border-radius: 50%;
 	transform: translate3d(0, 0, 0);
@@ -3899,7 +3902,8 @@ text-align: center;
 	color: #333;
 }
 .job-listing .job-listing-footer {
-	background-color: #f9f9f9;
+	/*background-color: #f9f9f9;*/
+	border-top: 1px solid #eee;
 	padding: 1rem 1.25rem;
 	border-radius: 0 0 4px 4px;
 	position: relative;
@@ -3911,6 +3915,7 @@ text-align: center;
 	display: flex;
     flex-wrap: wrap;
     align-items: center;
+	font-size: 0.938rem;
 }
 .job-listing .job-listing-footer ul li {
 	display: inline-block;
@@ -4165,7 +4170,12 @@ width: 100%;
 	justify-content: center;
 }
 .task-listing .task-listing-description p {
-	margin-bottom: 0.5rem;
+	overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 0.938rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .task-listing .task-listing-description p > span {
 	color: #666;
@@ -4199,7 +4209,7 @@ width: 100%;
 	top: 2px;
 }
 .task-listing-bid {
-	flex: 0 0 150px;
+	flex: 0 0 170px;
 	/*background-color: #f8f8f8;*/
 	position: relative;
 	display: flex;
@@ -4218,7 +4228,8 @@ width: 100%;
 	box-shadow: 0 4px 12px rgba(102, 103, 107, 0.25);
 }
 .task-listing-bid .task-offers {
-	margin-bottom: 15px;/*	text-align: center;*/
+	/*margin-bottom: 15px;
+	text-align: center;*/
 }
 .task-listing-bid .task-offers strong {
 	display: block;
@@ -4232,7 +4243,8 @@ width: 100%;
 	line-height: 24px;
 }
 .task-listing .task-listing-footer {
-    background-color: #f9f9f9;
+    /*background-color: #f9f9f9;*/
+	border-top: 1px solid #eee;
     padding:1rem 1.25rem;
     border-radius: 0 0 4px 4px;
     position: relative;
@@ -4248,7 +4260,7 @@ width: 100%;
 }
 .task-listing .task-listing-footer ul li {
     display: inline-block;
-    margin-right:30px;
+    margin-right:20px;
     color: #777;
 }
 .task-listing .task-listing-footer ul li:last-child {
@@ -4260,12 +4272,12 @@ width: 100%;
 }
 .task-tags > span, .task-tags > a {
 	transition: 0.3s;
-	font-size: 0.933rem;
+	font-size: 0.85rem;
 	border-radius: 4px;
 	background-color: rgba(102, 103, 107, .07);
 	color: #66676b;
 	display: inline-block;
-	padding: 6px 15px;
+	padding: 0.25rem 0.75rem;
 	margin: 2px 0;
 	line-height: 24px;
 }
@@ -4321,7 +4333,7 @@ width: 100%;
 }
 /* Section Styles */
 .section .task-listing-details, .section .task-listing-bid-inner {
-	padding: 27px 35px;
+	padding: 1rem 1.25rem;
 }
 
 
@@ -4334,14 +4346,14 @@ flex: 0 0 220px;
  @media (min-width: 481px) and (max-width: 767px) {
  .task-listing-bid {
  flex: 1;
- padding: 10px 0;
+ padding:0 0 20px 0;
 }
  .task-listing {
 flex-direction: column;
 }
  .task-listing-bid-inner {
 display: flex;
-margin: 20px 0 0 0;
+/*margin: 20px 0 0 0;*/
 }
  .tasks-grid-layout .task-listing-bid-inner {
 margin: 0;
@@ -4368,11 +4380,11 @@ width: 30%;
 
 /* Small Mobile Sizes */
 @media (max-width: 767px) {
- .section .task-listing-details {
-padding: 25px 30px;
-}
+/*.section .task-listing-details {
+	padding: 25px 30px;
+}*/
  .section .task-listing-bid-inner {
-padding: 0 30px;
+padding: 0 1.25rem;
 }
 }
 
@@ -4380,7 +4392,7 @@ padding: 0 30px;
 @media (max-width: 480px) {
  .task-listing-bid {
  flex: 1;
- padding: 30px 0;
+ padding:0 0 20px 0;
 }
  .task-listing {
 flex-direction: column;
@@ -4557,11 +4569,18 @@ width: calc(100%);
 	border-radius: 50%;
 	cursor: pointer;
 	object-fit: cover;
-    height: 120px;
 	width: 100%;
 }
+.freelancer .freelancer-overview .freelancer-avatar img {	
+    height: 120px;
+}
+
 .freelancer-overview .freelancer-avatar .verified-badge {
 	position: absolute;
+	bottom: 4px;
+    right: 4px;
+}
+.freelancer .freelancer-overview .freelancer-avatar .verified-badge {
 	bottom: 10px;
     right: 10px;
 }
@@ -4620,9 +4639,9 @@ width: calc(100%);
 }
 .freelancer-details-list ul li {
 	display: inline-block;
-	margin-right: 15px;
-	color: #808080;
-	/*margin-bottom: 15px;*/
+	margin-right: 10px;
+	color: #777;
+	margin-bottom: 10px;
 }
 .freelancer-details-list ul li:last-child {
 	margin-right: 0;
@@ -5977,21 +5996,22 @@ box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.15);
 	height: 100%;
 	overflow: hidden;
 }
-/* average rating before stars
-.star-rating:before {
+/* average rating before stars*/
+.star-rating:after {
 	content: attr(data-rating);
-	float: left;
-	border-radius: 3px;
+	/*float: right;
 	background-color: #febe42;
-	color: #fff;
-	font-size: 14px;
-	line-height: 15px;
-	font-weight: 700;
-	padding: 5px 7px;
+	line-height: 15px;*/
+	padding: 0 6px;
+    border: 1px solid #febe42;
+    border-radius: 0.2rem;
+	color: #febe42;
+	font-size: 1rem;	
+	font-weight: 500;	
 	position: relative;
-	top: 1px;
-	margin-right: 10px;
-} */
+	top: -2px;
+	margin-left: 6px;
+} 
 /* No stars */
 .star-rating.no-stars .star {
 	display: none;
@@ -6253,13 +6273,14 @@ input.keyword-input {
 }
 .tags-container input[type="checkbox"] + label {
 	transition: 0.3s;
-	font-size: 14.7px;
+	font-size: 0.85rem;
 	cursor: pointer;
-	border-radius: 4px;
+	border-radius: 0.25rem;
 	background-color: #eee;
-	color: #777;
+	color: #333;
 	display: inline-block;
-	padding: 6px 15px;
+    font-weight: normal;
+	padding: 0.25rem 0.75rem;
 	margin: 0;
 	line-height: 24px;
 }
@@ -9896,6 +9917,9 @@ input.range-slider, input.default-slider {
 .slider input {
 	display: none;
 }
+.slider .tooltip {
+    opacity: 1;
+}
 .slider .tooltip.top {
 	margin-top: -40px;
 }
@@ -10050,6 +10074,10 @@ select.bs-select-hidden, select.selectpicker {
 }
  .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
  width: 100%;
+}
+.bootstrap-select.language-switcher:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+	display: inline-block;
+    width: auto;
 }
 .bootstrap-select.form-control {
 	margin-bottom: 0;
@@ -10524,7 +10552,7 @@ width: 5px;
 	font-weight: 500;
 	opacity: 1;
 	border-color: #ced4da;
-	border-radius: 4px;
+	border-radius: 0.25rem;
 }
 /* Select Check Icon */
 .hide-tick .check-mark {
@@ -11135,6 +11163,8 @@ to {
 /* Boxed List for Single Page 
 ------------------------------------- */
 .boxed-list {
+	border-radius: 0.25rem;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 	margin-top: 10px;
 	display: block;
 }
@@ -11142,7 +11172,7 @@ to {
 	background-color: #fff;
 	border-radius: 4px 4px 0 0;
     padding: 15px 20px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #dfdfdf;
 }
 .boxed-list-headline h3 {
 	font-size: 1.25rem;
@@ -11169,8 +11199,8 @@ to {
 .boxed-list ul.boxed-list-ul > li {
 	display: block;
 	background-color: #fff;
-	padding: 20px;	
-	border-bottom:1px solid #ddd
+	padding:1rem 1.25rem;	
+	border-bottom:1px solid #dfdfdf;
 }
  .boxed-list ul.boxed-list-ul > li:last-child {
  border-bottom:none;
@@ -11262,9 +11292,9 @@ width: 100%;
 	margin-bottom: 0;
 	padding-bottom: 0;
 }
-.boxed-list-item .item-description {
+/*.boxed-list-item .item-description {
 	margin-top: 15px;
-}
+}*/
 /* Bid 
 ------------------------------------- */
 .bid {
@@ -11316,8 +11346,8 @@ width: 100%;
 	border-radius: 4px;
 	padding: 8px 12px;
 }
- .boxed-list ul.boxed-list-ul > li:nth-child(2n) .bid-rate {
- background: #f2f2f2;
+ .boxed-list ul.boxed-list-ul > li:nth-child(2n) /*.bid-rate*/ {
+ background: #fbfbfb;
 }
 .bid-rate .rate {
 	color: #333;
@@ -11435,22 +11465,32 @@ a.apply-now-button i {
 
 /* Freelancer Socials*/
 .freelancer-socials ul {
+	font-size:0;
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	cursor: default;
-	margin: 0 0 -5px -8px;
+	margin: 0;
 }
 .freelancer-socials ul li {
 	display: inline-block;
-	font-size: 24px;
+	font-size: 20px;
+	margin-right:0.5rem;
 }
 .freelancer-socials ul li a {
-	color: #b9b9b9;
-	padding: 0 8px;
+	color: #fff;
+    width: 36px;
+    height: 36px;
+    text-align: center;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.85;
 }
 .freelancer-socials ul li a:hover {
-	color: #333;
+	color: #fff;
+	opacity:1;
 }
 /* Attachments */
 .attachments-container {
@@ -11557,7 +11597,6 @@ a.attachment-box:hover i {
     line-height: 22px;
     align-items: center;
     margin: 0 -1rem;
-	margin-bottom:0.5rem;
     flex-wrap: wrap;
 }
 .profile-overview .overview-item {
@@ -12402,6 +12441,9 @@ ul.dashboard-box-list > li:hover {
 .dashboard-box .freelancer-overview .freelancer-avatar {
 	margin: 0;
 	width: 90px;
+}
+.dashboard-box .freelancer-overview .freelancer-avatar img{
+	max-height:80px;
 }
 .dashboard-box .freelancer-overview.manage-candidates .freelancer-avatar {
 	align-self: flex-start;
@@ -13275,8 +13317,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h3.page-title {
-	font-size: 20px;
-	line-height: 32px;
+	font-size: 1.125rem;
 }
 .section {
 	display: block;
