--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -6,11 +6,11 @@
 
  input:-webkit-autofill:focus, input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #fff inset !important;
- -webkit-text-fill-color: #808080 !important;
+ -webkit-text-fill-color: #777 !important;
 }
 /* Input Placeholder Color */
 ::placeholder {
- color: #808080;
+ color: #777;
  opacity: 1;
 }
 textarea {
@@ -327,12 +327,12 @@ button.mark-as-read {
 	line-height: 36px;
 	top: -4px;
 	right: -8px;
-	color: #888;
+	color: #777;
 	transition: 0.25s;
 }
 button.mark-as-read:hover {
 	background-color: #f2f2f2;
-	color: #888;
+	color: #777;
 }
 /* Content */
 .header-notifications-content {
@@ -612,7 +612,7 @@ ul.user-menu-small-nav li a:hover, ul.user-menu-small-nav li a:hover i {
 	z-index: 2;
 	line-height: 36px;
 	cursor: pointer;
-	color: #888;
+	color: #777;
 	font-size: 14.7px;
 	text-align: center;
 	transition: 0.3s;
@@ -2288,7 +2288,7 @@ right: auto;
 }
 #titlebar span a, #titlebar span {
 	font-size: 20px;
-	color: #888;
+	color: #777;
 	margin-bottom: 3px;
 	margin-top: 3px;
 	display: block;
@@ -2762,7 +2762,7 @@ background: #f7f7f7;
 }
 a.blog-post-info, .blog-post-info, .blog-post-date {
 	font-size: 14px;
-	color: #888;
+	color: #777;
 	margin-bottom: 10px;
 	display: inline-block;
 	background-color: #f0f0f0;
@@ -2780,7 +2780,7 @@ a.blog-post-info:hover {
 	padding: 0;
 	margin: 0;
 	display: block;
-	color: #808080;
+	color: #777;
 }
 .blog-post-content a.button i.icon-feather-arrow-right {
 	font-size: 20px;
@@ -2797,7 +2797,7 @@ blockquote {
 	margin: 0 20px;
 	font-size: 17px;
 	line-height: 30px;
-	color: #888;
+	color: #777;
 	border-left: 5px solid #eee;
 }
 /* Single Post Styles */
@@ -2827,7 +2827,7 @@ blockquote {
 #posts-nav li span {
 	display: block;
 	font-size: 14px;
-	color: #888;
+	color: #777;
 	margin-bottom: 10px;
 	display: inline-block;
 	background-color: #f0f0f0;
@@ -2962,13 +2962,13 @@ blockquote {
 	color: #666;
 }
 .comment-content > span {
-	color: #888;
+	color: #777;
 }
 body .comment-content p {
 	padding: 5px 0;
 }
 .comments-amount {
-	color: #888;
+	color: #777;
 	font-weight: 500;
 }
 .avatar {
@@ -3018,7 +3018,7 @@ body .comment-content p {
 	box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
 }
 .comment-by span.date {
-	color: #888;
+	color: #777;
 	font-weight: 500;
 	margin: 0px 0 0 0;
 	float: none;
@@ -3125,7 +3125,7 @@ margin-bottom: 30px;
 }
 .widget-text span {
 	font-size: 14px;
-	color: #888;
+	color: #777;
 	display: inline-block;
 	background-color: #f0f0f0;
 	border-radius: 4px;
@@ -3311,7 +3311,7 @@ span.blog-item-tag {
 	padding: 1.33rem;
 	margin: 0;
 	list-style: none;	
-	color: #808080;
+	color: #777;
 }
 .contact-location-info .contact-address ul li {
 	padding: 2px 0;
@@ -3851,7 +3851,7 @@ text-align: center;
 .job-listing {
 	display: block;
 	border-radius: 0.25rem;
-	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	margin-bottom: 1.25rem;
 	background-color: #fff;
 	transition: 0.3s;
@@ -3889,11 +3889,11 @@ text-align: center;
 }
 .job-listing h4.job-listing-company {
 	font-size: 16px;
-	color: #808080;
+	color: #777;
 }
 .job-listing h3.job-listing-title,
 .job-listing h4.job-listing-title {
-	font-size: 1.25rem;
+	font-size: 1.125rem;
 	color: #333;
 	margin-bottom:0
 }
@@ -4146,7 +4146,7 @@ width: 100%;
 ------------------------------------- */
 .task-listing {
 	border-radius: 4px;
-	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	margin-bottom: 1.25rem;
 	background-color: #fff;
 	transition: 0.3s;
@@ -4196,7 +4196,7 @@ width: 100%;
 	padding: 0;
 	margin: 0;
 	margin-right: 10px;
-	color: #808080;
+	color: #777;
 }
 .task-listing .task-icons i {
 	color: #909090;
@@ -4239,7 +4239,7 @@ width: 100%;
 }
 .task-listing-bid .task-offers span {
 	display: block;
-	color: #888;
+	color: #777;
 	line-height: 24px;
 }
 .task-listing .task-listing-footer {
@@ -4536,7 +4536,7 @@ width: calc(100%);
 	margin: 0 30px 30px 0;
 	width: calc(100% * (1/2) - 30px);
 	border-radius: 4px;
-	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	background-color: #fff;
 	transition: 0.3s;
 	position: relative;
@@ -4591,11 +4591,13 @@ width: calc(100%);
 	margin-top: 5px;
 }
 .freelancer-name h4, .freelancer-name h4 a {
-	font-family:'FSJoey', Helvetica, sans-serif;
-	font-size: 21px;
 	font-weight: 600;
-	color: #000;
+	color: #333;
 	margin-bottom: 0;
+}
+.freelancer .freelancer-name h4, .freelancer .freelancer-name h4 a{
+	color: #000;
+	font-size: 1.313rem;
 }
 .freelancer-name img.flag {
 	height: 15px;
@@ -4608,7 +4610,9 @@ width: calc(100%);
 	cursor: default
 }
 .freelancer-name span {
-	color: #777;
+	color: #777;	
+}
+.freelancer .freelancer-name span {
 	font-style:italic;
 }
 .freelancer-overview p {
@@ -4662,7 +4666,7 @@ width: calc(100%);
 	margin: 2px 10px 5px 0;
 }
 .freelancer-detail-item a, .freelancer-detail-item {
-	color: #888;
+	color: #777;
 }
 .freelancer-detail-item a:hover {
 	color: #66676b;
@@ -4972,7 +4976,7 @@ border-bottom: none;
 	display: block;
 }
 .companies-list .company span {
-	color: #888;
+	color: #777;
 }
 .companies-list .company .star-rating {
 	margin-top: 5px;
@@ -4980,7 +4984,7 @@ border-bottom: none;
 .not-rated, .company-not-rated {
 	border-radius: 4px;
 	background-color: #f0f0f0;
-	color: #888;
+	color: #777;
 	font-size: 14px;
 	line-height: 15px;
 	font-weight: 600;
@@ -5828,7 +5832,7 @@ box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.15);
 }
 .share-buttons-content span {
 	margin-left: 10px;
-	color: #888;
+	color: #777;
 	cursor: default;
 	padding: 10px 0;
 	display: inline-block;
@@ -6627,7 +6631,7 @@ box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
 	min-height: 42px;
 	top: 1px;
 	position: relative;
-	color: #888;
+	color: #777;
 	background-color: transparent;
 	overflow: hidden;
 	line-height: 22px;
@@ -6712,7 +6716,7 @@ box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
 }
 .banner-headline-alt span {
 	font-size: 24px;
-	color: #888;
+	color: #777;
 	font-weight: 300;
 	line-height: 34px;
 	margin-top: 5px;
@@ -6809,7 +6813,7 @@ box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
 	width: 100%;
 }
  .intro-banner-search-form input::placeholder {
- color: #888;
+ color: #777;
 }
 .intro-banner-search-form .input-with-icon {
 	align-self: center;
@@ -6907,7 +6911,7 @@ top: 55px;
 }
 .intro-stats li span {
 	font-weight: 300;
-	color: #888;
+	color: #777;
 	font-size: 18px;
 }
 /* Dark Style */
@@ -7126,7 +7130,7 @@ width: 50px !important;
 	transition: 0.35s;
 }
 .category-box-content p {
-	color: #888;
+	color: #777;
 	margin: 0;
 	padding: 0;
 	line-height: 24px;
@@ -7178,7 +7182,7 @@ width: 50px !important;
 	position: relative;
 	background-size: cover;
 	background-position: 100%;
-	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	transition: 0.4s;
 	margin: 0 0 25px 0;
 }
@@ -7333,7 +7337,7 @@ width: 50px !important;
 	/*background: #f6f6f6;*/
 	border-radius: 4px;
 	font-size: 18px;
-	color: #888;
+	color: #777;
 	text-align: center;
 	line-height: 24px;
 	/*padding: 15px;*/
@@ -7443,7 +7447,7 @@ width: 50px !important;
  /*margin-top: -40px;*/
 }
  .pricing-plan {
- box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+ box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
  margin-bottom: 1.5rem;
  flex: auto;
  width: 100%;
@@ -7453,7 +7457,7 @@ width: 50px !important;
  margin: 0 0 1.5rem 0;
 }
  .recommended.pricing-plan {
- box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+ box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
  /*margin-top: 80px;*/
 }
 }
@@ -7762,7 +7766,7 @@ transform: translateY(-18px);
 }
 .order-confirmation-page p {
 	font-size: 20px;
-	color: #808080;
+	color: #777;
 	font-weight: 300;
 	display: block;
 	line-height: 32px;
@@ -7907,7 +7911,7 @@ font-size: 30px;
 	margin-top: 25px;
 	font-style: 16px;
 	padding: 0 10px;
-	color: #808080;
+	color: #777;
 }
 .icon-box.with-line:before {
 	content: "";
@@ -7933,7 +7937,7 @@ display: none;
 	border-radius: 6px;
 	padding: 45px;
 	padding-top: 35px;
-	color: #888;
+	color: #777;
 	position: relative;
 	margin: 70px 0 0;
 	box-shadow: none;
@@ -7980,7 +7984,7 @@ display: none;
 	font-size: 18px;
 	font-weight: 300;
 	line-height: 30px;
-	color: #808080;
+	color: #777;
 	line-height: 32px;
 }
 .testimonial-author {
@@ -8236,7 +8240,7 @@ transform: scale(0.8) translateY(-50%)
 	margin-bottom: 7px;
 }
 .single-counter .counter-title {
-	color: #888;
+	color: #777;
 	padding-top: 0;
 	display: inline-block;
 	border-radius: 4px;
@@ -8344,7 +8348,7 @@ margin-bottom: -30px;
 	margin-bottom: 3px;
 }
 .bidding-widget .bidding-detail {
-	color: #888;
+	color: #777;
 	display: block;
 }
 .bidding-widget .bidding-detail strong {
@@ -8406,7 +8410,7 @@ margin-bottom: -30px;
 	text-align: center;
 	width: 50px;
 	height: 36px;
-	color: #808080;
+	color: #777;
 	line-height: 36px;
 	margin: 0 !important;
 	padding: 0 5px;
@@ -8430,7 +8434,7 @@ margin-bottom: -30px;
 	line-height: 36px;
 	font-size: 18px;
 	background-color: #f0f0f0;
-	color: #808080;
+	color: #777;
 	display: inline-block;
 	text-align: center;
 	border-radius: 4px;
@@ -8637,7 +8641,7 @@ width: 100%;
 	box-shadow: none;
 }
 .slick-prev.slick-disabled:before, .slick-next.slick-disabled:before {
-	color: #808080;
+	color: #777;
 }
 .slick-prev:before, .slick-next:before {
 	font-family: 'Line-Awesome';
@@ -9582,7 +9586,7 @@ img.mfp-img {
 }
 /* Close Button Adjustments*/
 #sign-in-dialog.dialog-with-tabs .mfp-close, #small-dialog.dialog-with-tabs .mfp-close, #small-dialog-1.dialog-with-tabs .mfp-close, #small-dialog-2.dialog-with-tabs .mfp-close, #small-dialog-3.dialog-with-tabs .mfp-close, #small-dialog-4.dialog-with-tabs .mfp-close {
-	color: #888;
+	color: #777;
 	background-color: #f8f8f8;
 	border-left: 1px solid #e0e0e0;
 	border-radius: 0 4px 0 0;
@@ -9611,7 +9615,7 @@ img.mfp-img {
 /* Forgot Password Link */
 .dialog-with-tabs .forgot-password {
 	font-size: 14px;
-	color: #888;
+	color: #777;
 	margin-top: -12px;
 	display: block;
 }
@@ -9629,7 +9633,7 @@ img.mfp-img {
 .welcome-text {
 	display: block;
 	text-align: center;
-	color: #808080;
+	color: #777;
 	margin-bottom: 33px;
 }
 .welcome-text h3 {
@@ -9672,7 +9676,7 @@ img.mfp-img {
 	top: -5px;
 	margin-left: -15px;
 	padding: 0px 10px;
-	color: #808080;
+	color: #777;
 }
 /* Social Login Buttons */
 .social-login-buttons {
@@ -10046,7 +10050,7 @@ select.bs-select-hidden, select.selectpicker {
 	z-index: 1;
 }
 .bootstrap-select > .dropdown-toggle.bs-placeholder, .bootstrap-select > .dropdown-toggle.bs-placeholder:hover, .bootstrap-select > .dropdown-toggle.bs-placeholder:focus, .bootstrap-select > .dropdown-toggle.bs-placeholder:active {
-	color: #808080;
+	color: #777;
 }
 .bootstrap-select > select {
 	position: absolute !important;
@@ -10418,7 +10422,7 @@ select.bs-select-hidden, select.selectpicker {
 	clear: both;
 	font-weight: normal;
 	line-height: 21px;
-	color: #808080;
+	color: #777;
 	border-radius: 4px;
 }
 .bootstrap-select:before {
@@ -10543,7 +10547,7 @@ width: 5px;
 	position: relative;
 	margin: 0;
 	outline: none;
-	color: #808080;
+	color: #777;
 	max-width: 100%;
 	width: 100%;
 	box-sizing: border-box;
@@ -11164,7 +11168,7 @@ to {
 ------------------------------------- */
 .boxed-list {
 	border-radius: 0.25rem;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	margin-top: 10px;
 	display: block;
 }
@@ -11179,7 +11183,7 @@ to {
 	margin-bottom:0
 }
 .boxed-list-headline h3 span {
-	color: #888;
+	color: #777;
 }
 .boxed-list-headline h3 i {
 	font-size: 18px;
@@ -11260,7 +11264,7 @@ width: 100%;
 }
 .boxed-list-item .item-content h4 span {
 	font-size: 16px;
-	color: #808080;
+	color: #777;
 	display: block;
 	font-weight: 500;
 }
@@ -11275,10 +11279,10 @@ width: 100%;
 }
 .boxed-list-item .item-details .detail-item {
 	margin-right: 15px;
-	color: #808080;
+	color: #777;
 }
 .boxed-list-item .item-details .detail-item a {
-	color: #808080;
+	color: #777;
 }
 .boxed-list-item .item-details .detail-item a:hover {
 	color: #66676b;
@@ -11342,7 +11346,7 @@ width: 100%;
 	text-align: center;
 	font-size: 14px;
 	background: #f4f4f4;
-	color: #888;
+	color: #777;
 	border-radius: 4px;
 	padding: 8px 12px;
 }
@@ -11383,7 +11387,7 @@ width: 100%;
 .job-overview {	
 	background-color: #fff;
 	border-radius: 0.25rem;
-	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 .job-overview .job-overview-headline {
 	color: #333;
@@ -11617,7 +11621,7 @@ a.attachment-box:hover i {
 	margin-bottom: 5px;
 }
 .profile-overview .overview-item span {
-	color: #808080;
+	color: #777;
 }
 /* Freelancer Indicators */
 .freelancer-indicators {
@@ -11914,7 +11918,7 @@ a.dashboard-responsive-nav-trigger {
 .dashboard-headline span {
 	display: block;
 	font-size: 18px;
-	color: #888;
+	color: #777;
 	line-height: 30px;
 	margin-top: 5px;
 }
@@ -11927,7 +11931,7 @@ a.dashboard-responsive-nav-trigger {
 	display: flex;
 	flex-wrap: wrap;
 	width: calc(100% + 30px);
-	margin-bottom: -30px;
+	/*margin-bottom: -30px;*/
 }
 .fun-fact {
 	background-color: #fff;
@@ -11973,32 +11977,32 @@ flex: 1;
 }
 .fun-fact-text {
 	flex: 1;
-	margin-left: 20px;
+	/*margin-left: 20px;*/
 }
 .fun-fact span {
-	font-size: 18px;
-	color: #888;
+	font-size: 1.125rem;
+	color: #777;
 	line-height: 22px;
 }
 .fun-fact h4 {
-	font-size: 38px;
+	font-size: 2rem;
 	color: #333;
-	line-height: 38px;
 	margin-top: 5px;
+	margin-bottom:0;
 }
 /* Dashboard Box
 ------------------------------------- */
 .dashboard-box {
 	display: block;
-	border-radius: 4px;
+	border-radius: 0.25rem;
 	background-color: #fff;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	margin-top: 25px;
 	position: relative;
 }
 .dashboard-box .headline {
 	display: block;
-	padding: 1rem 1.333rem;
+	padding: 1rem 1.25rem;
 	border-bottom: 1px solid #e4e4e4;
 	position: relative;
 }
@@ -12118,7 +12122,7 @@ flex: 1;
 	padding-left: 3px;
 	margin-top: 2px;
 	display: inline-block;
-	color: #888;
+	color: #777;
 }
 .note-buttons a:hover {
 	color: #444;
@@ -12390,7 +12394,7 @@ ul.dashboard-box-list > li:hover {
 /* Freelancers */
 .dashboard-box .job-listing-details {
 	box-shadow: none;
-	padding: 10px 0;
+	padding: 0;
 	align-items: center;
 	flex: auto;
 }
@@ -12421,6 +12425,7 @@ ul.dashboard-box-list > li:hover {
 }
 .dashboard-box .job-listing .job-listing-footer {
 	background-color:transparent;
+	border-top:0;
 	padding: 0;
 	border-radius: none;
 }
@@ -12496,7 +12501,7 @@ ul.dashboard-box-list > li:hover {
 .dashboard-task-info li span {
 	display: block;
 	font-size: 14px;
-	color: #888;
+	color: #777;
 	line-height: 20px;
 }
 /* Bid Acceptance */
@@ -12582,6 +12587,9 @@ max-width: 100%
 	margin-bottom: 1.25rem;
 	display: block;
 }
+.submit-field p:last-child{
+	margin-bottom:0;
+}
 .submit-field .pac-container {
 	box-shadow: none;
 	border: 1px solid #e0e0e0;
@@ -12598,7 +12606,7 @@ max-width: 100%
 	color: #333;
 }
 .submit-field h5 span {
-	color: #888;
+	color: #777;
 	font-weight: 500;
 }
 .help-icon {
@@ -13017,7 +13025,7 @@ width: 17px;
 }
 .message-by-headline span {
 	float: right;
-	color: #888;
+	color: #777;
 	font-size: 14px;
 }
 .message-by-headline h5 {
@@ -13074,7 +13082,7 @@ width: 17px;
 	white-space: nowrap;
 	overflow: hidden;
 	font-size: 14px;
-	color: #888;
+	color: #777;
 }
 .messages-container-inner .message-avatar img {
 	width: 40px;
@@ -13185,7 +13193,7 @@ width: 17px;
 .message-time-sign span {
 	background-color: #fff;
 	font-size: 14px;
-	color: #888;
+	color: #777;
 	z-index: 11;
 	position: relative;
 	padding: 0 10px;
@@ -13355,7 +13363,7 @@ h3.page-title {
 	font-size: 18px;
 	line-height: 26px;
 	font-weight: 300;
-	color: #888;
+	color: #777;
 	margin-top: 0;
 	display: block;
 }
