--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -240,8 +240,20 @@ input.with-border.is-invalid, input.with-border.is-invalid, input.with-border.is
   font-size: 1rem;
   line-height: 1;
   border-radius: 15px;
-	-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
+}
+.action_favorite{
+	color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+    font-size: 1.25rem;
+}
+.action_favorite.active{
+	background-color:#ffc107;
+	border-color:#ffc107;
+	color: #fff;
+    font-size: 1.25rem;
 }
 .edit_account_btn{
 	/* visibility: hidden;*/
@@ -821,7 +833,8 @@ ul.totalList > li > span {
     -webkit-box-orient: vertical;
 }
 .freelancer-intro > h5 {
-	font-size: 1.067rem;
+	font-size: 1.063rem;
+	margin-bottom: 0;
 	text-transform:capitalize
 }
 ul.skill-tags {	
@@ -1022,7 +1035,7 @@ ul.skill-tags > li {
 }
 .message-bubble .message-text .time {
     color: #777;
-	font-size:.85rem;
+	font-size:0.85rem;
 	line-height: 1.3;
 }
 .attachScrollbar {
@@ -1062,16 +1075,19 @@ ul.skill-tags > li {
 	border-radius:50%;
 	color:#fff;
 	font-family:'FSJoey', Helvetica, sans-serif;
-	padding: 0 0.75rem;
+	padding: 0.75rem;
     position: absolute;
-    right: -32px;
-    top: -32px;
-    height: 84px;
-    width: 84px;
+	right: -2rem;
+    top: -2rem;
+    height: 5.25rem;
+    width: 5.25rem;    
     display: flex;
     align-items: flex-end;
 }
-
+.how-steps > h2{
+	font-size:1.875rem;
+	margin-bottom:0;
+}
 .recommended .pricing-plan-features ul.list-2 li:before{
 	filter: brightness(0) invert(1);
 }
